// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches different titles 1`] = `
<button>
  Hey title
</button>
`;

exports[`Button matches different titles 2`] = `
<button>
  Hey another title
</button>
`;

exports[`Button renders correctly  1`] = `
<button>
  Hey My Title
</button>
`;
